src/objects/Cohort__c.object
<CustomObject>
    <fields>
        <fullName>Anticipated_Funding__c</fullName>
        <inlineHelpText>Discounted Pipeline - Rollup of Expected Amount for Funding Requests of Related Projects</inlineHelpText>
        <label>Anticipated Funding</label>
        <summarizedField>Projects__c.Anticipated_Funding__c</summarizedField>
        <summaryForeignKey>Projects__c.Cohort__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Confirmed_Funding__c</fullName>
        <inlineHelpText>Projects with Funding Requests that are Closed and Won</inlineHelpText>
        <label>Confirmed Funding</label>
        <summarizedField>Projects__c.Confirmed_Amount__c</summarizedField>
        <summaryForeignKey>Projects__c.Cohort__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funds_Targeted__c</fullName>
        <inlineHelpText>Non Discounted Pipeline - rollup of Full Amount for Funding Requests of Related Projects</inlineHelpText>
        <label>Funds Targeted</label>
        <summarizedField>Projects__c.Funds_Targeted__c</summarizedField>
        <summaryForeignKey>Projects__c.Cohort__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>AFRICA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOGOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRAZIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GUAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHILI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Development</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Orientation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <label>Target</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Variance__c</fullName>
        <formula>(Anticipated_Funding__c) - Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Target minus Anticipated</inlineHelpText>
        <label>Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Cohort</label>
    <listViews>
        <fullName>Africa_Cohorts</fullName>
        <columns>NAME</columns>
        <columns>Target__c</columns>
        <columns>Confirmed_Funding__c</columns>
        <columns>Anticipated_Funding__c</columns>
        <columns>Variance__c</columns>
        <columns>Funds_Targeted__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>AFRICA</value>
        </filters>
        <label>Africa Cohorts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Region__c</columns>
        <columns>Status__c</columns>
        <columns>Target__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Bogor_Cohorts</fullName>
        <columns>NAME</columns>
        <columns>Target__c</columns>
        <columns>Confirmed_Funding__c</columns>
        <columns>Anticipated_Funding__c</columns>
        <columns>Variance__c</columns>
        <columns>Funds_Targeted__c</columns>
        <columns>Status__c</columns>
        <columns>Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>BOGOR</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <label>Bogor Cohorts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>China_Cohorts</fullName>
        <columns>NAME</columns>
        <columns>Target__c</columns>
        <columns>Confirmed_Funding__c</columns>
        <columns>Anticipated_Funding__c</columns>
        <columns>Variance__c</columns>
        <columns>Funds_Targeted__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>CHINA</value>
        </filters>
        <label>China Cohorts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Cohort_Launching_in_FY_13</fullName>
        <columns>NAME</columns>
        <columns>Target__c</columns>
        <columns>Confirmed_Funding__c</columns>
        <columns>Anticipated_Funding__c</columns>
        <columns>Variance__c</columns>
        <columns>Funds_Targeted__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Date__c</field>
            <operation>greaterThan</operation>
            <value>10/1/2012</value>
        </filters>
        <filters>
            <field>Start_Date__c</field>
            <operation>lessThan</operation>
            <value>9/30/2013</value>
        </filters>
        <label>Cohort Launching in FY 13</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Cohort_Launching_in_FY_14</fullName>
        <columns>NAME</columns>
        <columns>Target__c</columns>
        <columns>Confirmed_Funding__c</columns>
        <columns>Anticipated_Funding__c</columns>
        <columns>Variance__c</columns>
        <columns>Funds_Targeted__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Date__c</field>
            <operation>greaterThan</operation>
            <value>10/1/2013</value>
        </filters>
        <filters>
            <field>Start_Date__c</field>
            <operation>lessThan</operation>
            <value>9/30/2014</value>
        </filters>
        <label>Cohort Launching in FY 14</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Cohorts_Launching_in_FY_12</fullName>
        <columns>NAME</columns>
        <columns>Target__c</columns>
        <columns>Confirmed_Funding__c</columns>
        <columns>Anticipated_Funding__c</columns>
        <columns>Variance__c</columns>
        <columns>Funds_Targeted__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Date__c</field>
            <operation>greaterThan</operation>
            <value>1/1/2012</value>
        </filters>
        <filters>
            <field>Start_Date__c</field>
            <operation>lessThan</operation>
            <value>9/30/2012</value>
        </filters>
        <label>Cohorts Launching in FY 12</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Completed_Cohorts</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Anticipated_Funding__c</columns>
        <columns>Confirmed_Funding__c</columns>
        <columns>Target__c</columns>
        <columns>Variance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <label>Completed Cohorts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Guad_Cohorts</fullName>
        <columns>NAME</columns>
        <columns>Target__c</columns>
        <columns>Confirmed_Funding__c</columns>
        <columns>Anticipated_Funding__c</columns>
        <columns>Variance__c</columns>
        <columns>Funds_Targeted__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>GUAD</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <label>Guad Cohorts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PEP_Cohorts</fullName>
        <columns>NAME</columns>
        <columns>Target__c</columns>
        <columns>Confirmed_Funding__c</columns>
        <columns>Anticipated_Funding__c</columns>
        <columns>Variance__c</columns>
        <columns>Funds_Targeted__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>PEP,PHILI</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <label>PEP Cohorts</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Cohort Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cohorts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>